--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
 	<h1>this is a test</h1>
-	<p>i like creatures/p>
+	<p>i like creatures</p>
 </div><!-- /.blurb -->
